fixed top of page spacing issue

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -2,6 +2,7 @@
 *{
     font-family: quattrocento;
 }
+
 /* creating a parallax effect */
 .parallax{
     background-image: url(https://wallpaperscraft.com/image/keyboard_laptop_macro_73432_1920x1080.jpg);
@@ -10,7 +11,6 @@
     background-size: cover;
     background-attachment: fixed;
     scroll-behavior: smooth;
-
 }
 .parallax h1{
     display: flex;
@@ -21,6 +21,13 @@
     width: 100%;
     height: 100%;
     text-align: center;
+}
+body{
+    background-color: rgb(255, 230, 209);
+    margin-top: -40px;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+
 }
 .navbar{
     display: flex;
@@ -45,7 +52,7 @@ button{
     ". . . box2 box2"
     ". box3 box3 . .";
     margin: 40px;
-    padding: 10px;    
+    padding: 10px;  
 }
 /* making all divs circles */
 .what, .who, .goal{
